# cookido-account-move

./: .envrc  .gitignore  README.md  TODO.md  debug_collections.py  pyproject.toml  run-export.sh  run-import.sh  run-organize.sh
.claude/: CLAUDE.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: Research.md
src/cookido_agent/: __init__.py  classifier.py  collections.py  exporter.py  importer.py  models.py  organizer.py
