[project]
name = "cookido-agent"
version = "0.1.0"
description = "Cookidoo recipe management agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookidoo-api>=0.15.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
cookido-agent = "cookido_agent.exporter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
